--- a/index.html
+++ b/index.html
@@ -4,13 +4,11 @@
 <head>
     <title>Catalan Chess</title>
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-    <!-- <script src="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.js"></script> -->
     <script src="./js/chessboard-1.0.0.js"></script>
     <script src="./js/chess.js"></script>
 
     <link rel="stylesheet" type="text/css" href="./css/style.css" />
     <link rel="stylesheet" type="text/css" href="./css/chessboard-1.0.0.css" />
-    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css"> -->
 </head>
 
 <body>
@@ -32,11 +30,15 @@
             <div id="status"></div>
             <label>FEN:</label>
             <div id="fen"></div>
+            <label>Value:</label>
+            <div id="fenvalue"></div>
             <label>PGN:</label>
             <div id="pgn"></div>
         </div>
     </div>
 
+    <script src="./js/front.js"></script>
+    <script src="./js/ai.js"></script>
     <script src="./js/index.js"></script>
 </body>
 
